@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   157: AstroFloyd, 08/04/2011
+     - Changed type of lgx,lgy from integer to logical
+     
    156: AstroFloyd, 08/04/2011
      - Finally fixed the bug that wouldn't allow plotting a log(t_f-t) structure plot:
        - dat(), not xx(),yy(), is passed to plt_convection(), which not logged
